fix(utils): fix checksum calculation in tests